<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="textMultiLine" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAllCaps="true"
        android:text="@string/TOPPINGS"
        android:textColor="#000000"
        android:textSize="16sp"
        style="@style/HeaderTextStyle"/>


    <CheckBox
        android:id="@+id/notify_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Whipped_cream"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginLeft="16sp"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chocolate"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginLeft="16sp"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:textAppearanceMedium" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/QUANTITY"
        android:textColor="#000000"
        android:textSize="16sp"
        style="@style/HeaderTextStyle"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increment_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:onClick="increment"
            android:text="+" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp" />


        <Button
            android:id="@+id/decrement_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ORDER_SUMMARY"
        android:textColor="#000000"
        android:textSize="16sp"
        style="@style/HeaderTextStyle"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="0$"
        android:textColor="#000000"
        android:textSize="16sp" />


    <Button
        android:id="@+id/submit_order_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:text="@string/Order" />

</LinearLayout>

</ScrollView>